minIO/NAS3/nfs-provisioner.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nfs-subdir-external-provisioner-nas3
  namespace: kube-system
  labels:
    app: nfs-subdir-external-provisioner-nas3
    release: nfs-subdir-external-provisioner-nas3
spec:
  selector:
    matchLabels:
      app: nfs-subdir-external-provisioner-nas3
  template:
    metadata:
      labels:
        app: nfs-subdir-external-provisioner-nas3
    spec:
      containers:
      - name: nfs-subdir-external-provisioner-nas3
        image: registry.k8s.io/sig-storage/nfs-subdir-external-provisioner:v4.0.2
        volumeMounts:
        # mounts the NFS path into the container, allowing the provisioner to access it. The mount path /persistentvolumes is where the NFS shares will be available inside the container.
        - mountPath: /persistentvolumes
          name: nfs-subdir-external-provisioner-root
      serviceAccount: nfs-subdir-external-provisioner
      volumes:
      #  defines the actual NFS volume that the provisioner will use. It specifies the path and server, which must match the environment variables defined earlier.
      - name: nfs-subdir-external-provisioner-root
        nfs:
          path: /net4-storage-class  # same path as NFS_PATH
          server: 192.168.4.104  # same as NFS_SERVER
