minIO/NAS3/ingress-backup.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-api
  namespace: minio-backup
  annotations:
    meta.helm.sh/release-name: minio
    meta.helm.sh/release-namespace: minio-devops
spec:
  ingressClassName: traefik
  rules:
    - host: minio-backup-api.seven-gen.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio-backup
                port:
                  number: 9000  # Update to the correct port
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio
  namespace: minio-backup
  annotations:
    meta.helm.sh/release-name: minio
    meta.helm.sh/release-namespace: minio-devops
spec:
  ingressClassName: traefik
  rules:
    - host: minio-backup.seven-gen.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio-backup-console
                port:
                  number: 9001  # Update to the correct port
