minIO/NAS3/ingress-minio-putulero.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-putulero-api
  namespace: minio-putulero
  annotations:
    meta.helm.sh/release-name: minio
    meta.helm.sh/release-namespace: minio-skedulosa
spec:
  ingressClassName: traefik
  rules:
    - host: minio-putulero-api.media-meter.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio-putulero
                port:
                  number: 9000  # Update to the correct port
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-putulero-console
  namespace: minio-putulero
  annotations:
    meta.helm.sh/release-name: minio
    meta.helm.sh/release-namespace: minio-skedulosa
spec:
  ingressClassName: traefik
  rules:
    - host: minio-putulero.media-meter.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio-putulero-console
                port:
                  number: 9001  # Update to the correct port
