minIO/NAS3/patch-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-api
  namespace: minio
  annotations:
    meta.helm.sh/release-name: minio
    meta.helm.sh/release-namespace: minio
spec:
  ingressClassName: traefik
  rules:
    - host: minio-api.media-meter.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                namespace: minio-operator  # Update to the correct namespace
                port:
                  number: 9000  # Update to the correct port
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio
  namespace: minio
  annotations:
    meta.helm.sh/release-name: minio
    meta.helm.sh/release-namespace: minio
spec:
  ingressClassName: traefik
  rules:
    - host: minio.media-meter.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio-console
                namespace: minio-operator  # Update to the correct namespace
                port:
                  number: 9001  # Update to the correct port
